Assignment_2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> list
Rule 1     list -> LBRACKET sequence RBRACKET
Rule 2     list -> LBRACKET RBRACKET
Rule 3     sequence -> listelement COMMA sequence
Rule 4     sequence -> listelement
Rule 5     listelement -> list
Rule 6     listelement -> NUMBER
Rule 7     start_program -> program
Rule 8     start_program -> list
Rule 9     start_list -> list
Rule 10    assign_stmt -> IDENT ASSIGNOP expr
Rule 11    assign_list_stmt -> IDENT ASSIGNOP list
Rule 12    stmt -> assign_stmt
Rule 13    stmt -> assign_list_stmt
Rule 14    stmt -> while_stmt
Rule 15    stmt -> if_stmt
Rule 16    stmt -> define_stmt
Rule 17    program -> stmt_list
Rule 18    stmt_list -> stmt SEMICOLON stmt_list
Rule 19    stmt_list -> stmt
Rule 20    expr -> expr PLUS term
Rule 21    expr -> expr MINUS term
Rule 22    expr_list -> expr COMMA expr_list
Rule 23    expr_list -> expr
Rule 24    expr -> term
Rule 25    term -> term TIMES fact
Rule 26    term -> fact
Rule 27    fact -> LPAREN expr RPAREN
Rule 28    fact -> NUMBER
Rule 29    fact -> IDENT
Rule 30    fact -> func_call
Rule 31    fact -> NAME
Rule 32    while_stmt -> WHILE expr DO stmt_list OD
Rule 33    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 34    define_stmt -> DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
Rule 35    param_list -> IDENT COMMA param_list
Rule 36    param_list -> IDENT
Rule 37    func_call -> IDENT LPAREN expr_list RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 10 11
COMMA                : 3 22 35
DEFINE               : 34
DO                   : 32
ELSE                 : 33
END                  : 34
FI                   : 33
IDENT                : 10 11 29 34 35 36 37
IF                   : 33
LBRACKET             : 1 2
LPAREN               : 27 34 37
MINUS                : 21
NAME                 : 31
NUMBER               : 6 28
OD                   : 32
PLUS                 : 20
PROC                 : 34
RBRACKET             : 1 2
RPAREN               : 27 34 37
SEMICOLON            : 18
THEN                 : 33
TIMES                : 25
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

assign_list_stmt     : 13
assign_stmt          : 12
define_stmt          : 16
expr                 : 10 20 21 22 23 27 32 33
expr_list            : 22 37
fact                 : 25 26
func_call            : 30
if_stmt              : 15
list                 : 5 8 9 11 0
listelement          : 3 4
param_list           : 34 35
program              : 7
sequence             : 1 3
start_list           : 
start_program        : 
stmt                 : 18 19
stmt_list            : 17 18 32 33 33 34
term                 : 20 21 24 25
while_stmt           : 14

Parsing method: LALR

state 0

    (0) S' -> . list
    (1) list -> . LBRACKET sequence RBRACKET
    (2) list -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 1

    list                           shift and go to state 2

state 1

    (1) list -> LBRACKET . sequence RBRACKET
    (2) list -> LBRACKET . RBRACKET
    (3) sequence -> . listelement COMMA sequence
    (4) sequence -> . listelement
    (5) listelement -> . list
    (6) listelement -> . NUMBER
    (1) list -> . LBRACKET sequence RBRACKET
    (2) list -> . LBRACKET RBRACKET

    RBRACKET        shift and go to state 6
    NUMBER          shift and go to state 5
    LBRACKET        shift and go to state 1

    listelement                    shift and go to state 7
    list                           shift and go to state 4
    sequence                       shift and go to state 3

state 2

    (0) S' -> list .



state 3

    (1) list -> LBRACKET sequence . RBRACKET

    RBRACKET        shift and go to state 8


state 4

    (5) listelement -> list .

    COMMA           reduce using rule 5 (listelement -> list .)
    RBRACKET        reduce using rule 5 (listelement -> list .)


state 5

    (6) listelement -> NUMBER .

    COMMA           reduce using rule 6 (listelement -> NUMBER .)
    RBRACKET        reduce using rule 6 (listelement -> NUMBER .)


state 6

    (2) list -> LBRACKET RBRACKET .

    COMMA           reduce using rule 2 (list -> LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 2 (list -> LBRACKET RBRACKET .)
    $end            reduce using rule 2 (list -> LBRACKET RBRACKET .)


state 7

    (3) sequence -> listelement . COMMA sequence
    (4) sequence -> listelement .

    COMMA           shift and go to state 9
    RBRACKET        reduce using rule 4 (sequence -> listelement .)


state 8

    (1) list -> LBRACKET sequence RBRACKET .

    COMMA           reduce using rule 1 (list -> LBRACKET sequence RBRACKET .)
    RBRACKET        reduce using rule 1 (list -> LBRACKET sequence RBRACKET .)
    $end            reduce using rule 1 (list -> LBRACKET sequence RBRACKET .)


state 9

    (3) sequence -> listelement COMMA . sequence
    (3) sequence -> . listelement COMMA sequence
    (4) sequence -> . listelement
    (5) listelement -> . list
    (6) listelement -> . NUMBER
    (1) list -> . LBRACKET sequence RBRACKET
    (2) list -> . LBRACKET RBRACKET

    NUMBER          shift and go to state 5
    LBRACKET        shift and go to state 1

    listelement                    shift and go to state 7
    list                           shift and go to state 4
    sequence                       shift and go to state 10

state 10

    (3) sequence -> listelement COMMA sequence .

    RBRACKET        reduce using rule 3 (sequence -> listelement COMMA sequence .)

